--- a/app/views/coworkings/show.html.erb
+++ b/app/views/coworkings/show.html.erb
@@ -31,7 +31,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 hidden-xs">
             <h3 class="highlight-price">Horaires</h3>
               <% if @coworking.schedules.blank? %>
               <% if policy(@coworking).edit? %>
@@ -52,7 +52,7 @@
               <% else %>
               <p>Sam : <span><%= s.sat_start %> - <%= s.sat_end %></span></p>
               <% end %>
-              <% if s.sat_start == "Fermé" || s.sat_end == "Fermé" %>
+              <% if s.sun_start == "Fermé" || s.sun_end == "Fermé" %>
               <p>Dim : <span>Fermé</span></p>
               <% else %>
               <p>Dim : <span><%= s.sun_start %> - <%= s.sun_end %></span></p>
@@ -64,8 +64,8 @@
               <% end %>
               <% end %>
               </div>
-              <%#= link_to "Mettre à jour", edit_coworking_schedule_path(@coworking.schedules) %>
-              <%#= render 'schedules/edit' %>
+              <button type="button" class="btn btn-primary btn-recall-demands" data-toggle="modal" data-target="#edit-hours">Mettre à jour</button>
+              <%= render 'schedules/edit' %>
               <% end %>
           </div>
         </div>
@@ -147,6 +147,47 @@
               </ul>
             </div>
             <% end %>
+          </div>
+        </div>
+        <div class="row hidden-lg hidden-md">
+          <div class="col-xs-12">
+            <h3 class="highlight-price">Horaires</h3>
+              <% if @coworking.schedules.blank? %>
+              <% if policy(@coworking).edit? %>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#create-hours">Renseigner les horaires</button>
+              <%= render 'schedules/new' %>
+              <% end %>
+              <% else %>
+              <div class="hours">
+              <% @coworking.schedules.each do |s| %>
+              <% unless s.no_stop == true %>
+              <p>Lun : <span><%= s.mond_start %> - <%= s.mond_end %></span></p>
+              <p>Mar : <span><%= s.tue_start %> - <%= s.tue_end %></span></p>
+              <p>Mer : <span><%= s.wed_start %> - <%= s.wed_end %></span></p>
+              <p>Jeu : <span><%= s.thu_start %> - <%= s.thu_end %></span></p>
+              <p>Ven : <span><%= s.fri_start %> - <%= s.fri_end %></span></p>
+              <% if s.sat_start == "Fermé" || s.sat_end == "Fermé" %>
+              <p>Sam : <span>Fermé</span></p>
+              <% else %>
+              <p>Sam : <span><%= s.sat_start %> - <%= s.sat_end %></span></p>
+              <% end %>
+              <% if s.sun_start == "Fermé" || s.sun_end == "Fermé" %>
+              <p>Dim : <span>Fermé</span></p>
+              <% else %>
+              <p>Dim : <span><%= s.sun_start %> - <%= s.sun_end %></span></p>
+              <% end %>
+              <% else %>
+              <div class="hours-24">
+              <p>Ouvert 24/7</p>
+              </div>
+              <% end %>
+              <% end %>
+              </div>
+              <div class="col-xs-12 text-center">
+              <button type="button" class="btn btn-primary btn-recall-demands" data-toggle="modal" data-target="#edit-hours">Mettre à jour</button>
+              <%= render 'schedules/edit' %>
+              </div>
+              <% end %>
           </div>
         </div>
         <h3>Localisation</h3>
