--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -43,7 +43,7 @@
           <p> - L'assistance à la <b>négociation</b></p>
           <p> - Les <b>Benchmarks financiers</b> des alternatives</p>
           <p> - Nos <b>Recommandations</b> commerciales sur les engagements contractuels</p>
-          <p>Un consultant expérimenté en immobilier d’entreprise vous accompagne tout au long du projet.</p>
+          <p>Un consultant expérimenté en immobilier d’entreprise vous accompagne tout au long du projet <i>(Cette offre est disponible en Île de France. Veuillez nous contacter pour les sujets en régions).</i></p>
         </div>
       </div>
       <div class="row">
