--- a/app/views/coworkings/show.html.erb
+++ b/app/views/coworkings/show.html.erb
@@ -31,11 +31,11 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12 hidden-xs">
+          <div class="col-xs-12">
             <h3 class="highlight-price">Horaires</h3>
               <% if @coworking.schedules.blank? %>
               <% if policy(@coworking).edit? %>
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#create-hours">Renseigner les horaires</button>
+             <button type="button" class="btn btn-primary btn-recall-demands" data-toggle="modal" data-target="#create-hours">Renseigner les horaires</button>
               <%= render 'schedules/new' %>
               <% end %>
               <% else %>
@@ -149,12 +149,12 @@
             <% end %>
           </div>
         </div>
-        <div class="row hidden-lg hidden-md">
-          <div class="col-xs-12">
+        <div class="row">
+          <div class="col-xs-12 hidden-lg hidden-md">
             <h3 class="highlight-price">Horaires</h3>
               <% if @coworking.schedules.blank? %>
               <% if policy(@coworking).edit? %>
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#create-hours">Renseigner les horaires</button>
+              <button type="button" class="btn btn-primary btn-recall-demands" data-toggle="modal" data-target="#create-hours">Renseigner les horaires</button>
               <%= render 'schedules/new' %>
               <% end %>
               <% else %>
