--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,7 @@
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= favicon_link_tag "favicon-32x32.png" %>
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="4c4f2280-79b9-4fc0-bff0-3b6650512ff9";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   </head>
   <body>
     <%= render 'shared/flashes' %>
