--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -179,7 +179,7 @@
         <div class="home-cta">
         <%= link_to new_coworking_path, class: 'form-search' do %>
         <div class="flexbox">
-          <%= submit_tag "Déposer un espace", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+          <%= submit_tag "Proposer un espace", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
         </div>
         <% end %>
         </div>
