--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "bootstrap-datepicker";
 @import "bootstrap-datetimepicker";
 @import "jquery.ui.all";
+@import "cookies_eu";
 
 // Your CSS partials
 @import "layouts/index";
