--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -101,6 +101,7 @@
   border: 1px solid;
   padding: 5px;
   border-radius: 5px;
+  background-color: transparent;
 }
 .navbar-wagon-link-demand:hover {
   color: $my-gray;
