--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -16,7 +16,7 @@
               Le guide des startups et des grands groupes pour leurs recherches d'espaces de travail flexibles
             </p>
           </div>
-          <%= link_to "Recherche spécifique", new_demand_path, class: "navbar-wagon-item-demand navbar-wagon-link-demand tooltips", title: "", data: { toggle: "tooltip", placement: "bottom", original_title: "Vous êtes un grand groupe ou une startup, décrivez en quelques minutes vos besoins, nous vous accompagnons dans votre projet"}  %>
+          <%= link_to "Renseignez votre cahier des charges", new_demand_path, class: "btn btn-primary btn-search tooltips", title: "", data: { toggle: "tooltip", placement: "right", original_title: "Vous êtes un grand groupe ou une startup, décrivez en quelques minutes vos besoins, nous vous accompagnons dans votre projet"}  %>
           <%#= simple_form_for :coworking, :method => 'get', :html => {:class => 'form-search-banner'}, url: coworkings_path do |f| %>
             <%#= f.input_field :address, placeholder: "Où rêvez-vous de travailler ?", class: "search-query" %>
             <!-- <span> -->
