--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -155,7 +155,7 @@
   height: 45px;
   padding: 0px 10px;
   border: 1px gray solid;
-  border-radius: 0 5px 5px 0;
+  // border-radius: 0 5px 5px 0;
   font-family: $body-font;
   -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
