--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -48,9 +48,9 @@
     <ul class="list-inline">
       <li>
       <%= simple_form_for :coworking, :method => 'get', :html => {:class => 'form-search-banner'}, url: coworkings_path do |f| %>
-        <%= f.input_field :address, placeholder: "Où rêvez-vous de travailler ?", class: "search-query" %>
+        <%= f.input_field :address, placeholder: "Où rêvez-vous de travailler ?", class: "search-query hidden" %>
         <span>
-          <%= f.submit "Rechercher", class: "btn btn-primary btn-search", style:"text-decoration:none" %>
+          <%= f.submit "Consulter toutes les offres", class: "navbar-wagon-item-demand navbar-wagon-link-demand", style:"text-decoration:none" %>
         </span>
         <% end %>
         <%#= link_to "Recherche spécifique", new_demand_path, class: "navbar-wagon-item-demand navbar-wagon-link-demand tooltips", title: "", data: { toggle: "tooltip", placement: "bottom", original_title: "Vous êtes un grand groupe ou une startup, décrivez en quelques minutes vos besoins, nous vous accompagnons dans votre projet"}  %>
