--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -197,15 +197,15 @@
         </div>
         <div class="modal-body-welcome">
           <p>Bonjour,</p>
-          <p>Je suis Gautier Weigert, fondateur de The Real Estate Jungle. Merci de votre visite sur le site.</p>
-          <p>Nous sommes actuellement en version beta, nous travaillons tous les jours pour vous proposer une offre exhaustive d'espaces de travail flexibles qui, je l'espère, seront bientôt en ligne, consultables gratuitement sur le site.</p>
+          <p>Merci de votre visite sur le site.</p>
+          <p>Nous sommes actuellement en version beta, nous travaillons tous les jours pour vous proposer une offre exhaustive d'espaces de travail flexibles consultable gratuitement.</p>
           <p>Nous avons décidé de développer The Real Estate Jungle pour <strong>accompagner les startups et les grands groupes</strong> dans leurs recherches d'espaces de travail correspondant aux nouvelles attentes des collaborateurs et aux besoins d'optimisation des entreprises.</p>
-          <p>Nous souhaitons proposer un accès gratuit à l'offre de coworkings en France et en Europe via notre plateforme. <strong>N'hésitez pas à faire partie des "early adopters"</strong> en vous inscrivant simplement sur le site via Linkedin. Cela nous permettra de vous tenir au courant de notre développement.</p>
-          <p>Nous sommes des professionnels de l'immobilier d'entreprise. J'ai, pour ma part, eu la chance de travailler pendant 10 ans pour des grands groupes internationaux dans le conseil et le service. Je souhaite aujourd'hui apporter mes connaissances et mon expertise à toutes les startups et tous les grands groupes souhaitant se lancer dans l'aventure du travail flexible.</p>
+          <p><strong>N'hésitez pas à faire partie des "early adopters"</strong> en vous inscrivant simplement sur le site via Linkedin. Cela nous permettra de vous tenir au courant de notre développement.</p>
+          <p>Nous sommes des professionnels de l'immobilier d'entreprise, nous cumulons plus de 15 ans d'expérience au sein de grands groupes internationaux dans le conseil et le service. Nous souhaitons apporter nos connaissances et notre expertise à toutes les startups et tous les grands groupes souhaitant se lancer dans l'aventure du travail flexible.</p>
           <p><strong>Vous pouvez d'ores et déjà nous soumettre votre cahier des charges</strong>. Nous vous accompagnerons dans votre recherche en travaillant avec tous les acteurs du coworking sur le marché.</p>
           <p>N'hésitez pas à en apprendre plus en cliquant sur les liens situés plus bas.</p>
-          <p>J'espère vous revoir souvent sur The Real Estate Jungle et vous accompagner dans vos projets immobiliers.</p>
-          <p>Gautier</p>
+          <p>Nous espérons vous revoir souvent sur The Real Estate Jungle et vous accompagner dans vos projets immobiliers.</p>
+          <p>Gautier - Founder</p>
         </div>
         <div class="modal-footer-welcome">
          <div class="flexbox-welcome">
