change in demand form

--- a/app/views/demands/new.html.erb
+++ b/app/views/demands/new.html.erb
@@ -4,8 +4,7 @@
       <div class="form-demand-new">
         <h1>Vos critères immobiliers</h1>
         <%= simple_form_for @demand do |f| %>
-        <%= f.input :company_name, placeholder: "Ma société", label: "Quel est le nom de votre société ?", error: "Merci de remplir ce champs pour valider le formulaire" %>
-            <h2>Type de contrat souhaité</h2>
+            <h2>Type de location</h2>
             <div class="form-group">
               <div class="checkbox-choices">
                 <% Occupation.all.each do |occupation| %>
@@ -16,12 +15,27 @@
                 <% end %>
                </div>
             </div>
+            <h2>Type de surface</h2>
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="form-group">
+                  <div class="checkbox-choices">
+                    <% Surface.all.each do |surface| %>
+                      <input type="checkbox" class="hidden" value="<%= surface.id %>" name="demand[surface_ids][]" id="demand_surface_ids_<%= surface.id %>">
+                      <label class="checkbox-choice" for="demand_surface_ids_<%= surface.id %>">
+                        <%= surface.name %>
+                      </label>
+                    <% end %>
+                   </div>
+                </div>
+              </div>
+            </div>
         <div class="row">
-          <div class="col-xs-12 col-md-6">
-          <%= f.input :lease_budget, placeholder: "150 000", label: "Budget locatif maximum annuel hors charges et taxes (HC HT) ?", error: "Merci de remplir ce champs pour valider le formulaire" %>
+          <div class="col-xs-12 col-md-12">
+          <%= f.input :lease_budget, placeholder: "150 000", label: "Budget locatif maximum annuel ?", error: "Merci de remplir ce champs pour valider le formulaire" %>
           </div>
           <div class="col-xs-12 col-md-6">
-          <%= f.input :buy_budget, placeholder: "1 200 000", label: "Budget acquisition hors droits (HD) (environ 8% du prix d'achat) ?", error: "Merci de remplir ce champs pour valider le formulaire" %>
+          <%#= f.input :buy_budget, placeholder: "1 200 000", label: "Budget acquisition hors droits (HD) (environ 8% du prix d'achat) ?", error: "Merci de remplir ce champs pour valider le formulaire" %>
           </div>
         </div>
         <h2>Où souhaitez-vous vous implanter ?</h2>
@@ -40,7 +54,7 @@
         <h2>Informations générales</h2>
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <%= f.input :surface, label: "Surface", error: "Merci de remplir ce champs pour valider le formulaire", placeholder: "500", hint: "La surface SUBL (Surface Utile Brute Locative) représente l'espace comprenant les postes de travail, les salles de réunions, les espaces communs, etc.)." %>
+            <%= f.input :surface, label: "Surface", error: "Merci de remplir ce champs pour valider le formulaire", placeholder: "500", hint: "La surface représente l'espace comprenant les postes de travail, les salles de réunions, les espaces communs, etc.)." %>
           </div>
           <div class="col-xs-12 col-md-6">
             <%= f.input :workstation_number, label: "Nombre de postes de travail", placeholder: "35", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Un poste de travail représente le bureau d'un collaborateur. Vous pouvez avoir moins de postes que le nombre d'employés (dans le cas d'une politique de bureaux non attribués par exemple)." %>
@@ -52,21 +66,6 @@
           </div>
           <div class="col-xs-12 col-md-6">
             <%= f.input :parking_number, label: "Nombre de parking", placeholder: "3", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement le nombre idéal ou laissez blanc si vous n'en avez pas l'utilité." %>
-          </div>
-        </div>
-        <h2>Type de surface recherché</h2>
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="form-group">
-              <div class="checkbox-choices">
-                <% Surface.all.each do |surface| %>
-                  <input type="checkbox" class="hidden" value="<%= surface.id %>" name="demand[surface_ids][]" id="demand_surface_ids_<%= surface.id %>">
-                  <label class="checkbox-choice" for="demand_surface_ids_<%= surface.id %>">
-                    <%= surface.name %>
-                  </label>
-                <% end %>
-               </div>
-            </div>
           </div>
         </div>
         <h2>Votre calendrier</h2>
@@ -85,6 +84,14 @@
         <div class="row">
           <div class="col-xs-12">
           <%= f.input :other_spec, as: :text, :input_html => {:rows => 10}, label: "Détails", hint: "Un besoin spécifique peut être par exemple: un grand plateau type industriel, une très grande salle de réunion, une terrasse, une contrainte de confidentialité, un besoin en salle serveurs, etc.", placeholder: "Nous recherchons un espace atypique avec une grande hauteur sous plafond..." %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
+         <%= f.input :company_name, placeholder: "Ma société", label: "Quel est le nom de votre société ?", error: "Merci de remplir ce champs pour valider le formulaire" %>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <%= f.input :phone, placeholder: "06 12 34 56 78", label: "Numéro de téléphone", error: "Merci de remplir ce champs pour valider le formulaire"  %>
           </div>
         </div>
         <%= f.submit "Envoyer mon cahier des charges", class: "btn btn-primary btn-block" %>
