--- a/app/views/coworkings/_map_box.html.erb
+++ b/app/views/coworkings/_map_box.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-xs-12">
       <div class="map_box">
-      <h3><%= coworking.name %></h3>
-      <p><%= coworking.address %></p>
+      <h3><%= coworking.landlords.first.name %></h3>
+      <p><%#= coworking.address %></p>
         <div class="row">
           <div class="col-xs-12">
             <h3>Tarifs</h3>
