--- a/app/views/coworkings/show.html.erb
+++ b/app/views/coworkings/show.html.erb
@@ -185,9 +185,11 @@
               <% end %>
               <% end %>
               </div>
-              <div class="col-xs-12 text-center">
+              <div class="col-xs-12 text-center hidden-lg hidden-md">
+              <% if policy(@coworking).edit? %>
               <button type="button" class="btn btn-primary btn-recall-demands" data-toggle="modal" data-target="#edit-hours">Mettre à jour</button>
               <%= render 'schedules/edit' %>
+              <% end %>
               </div>
               <% end %>
           </div>
