coquille home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
    <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
      <%= image_tag "Download-Computer.svg", alt: "coworking" %>
      <h2 class="offer-title">Recherchez en ligne </h2>
-     <p>Consultez les annonces qui correspondent le mieux à vos besoins ! espaces de coworking, bureaux privatisés ou salles de réunions</p>
+     <p>Consultez les annonces qui correspondent le mieux à vos besoins ! espaces de coworking, bureaux privatisés ou salles de réunion</p>
    </div>
  </div>
 
