--- a/app/views/coworkings/show.html.erb
+++ b/app/views/coworkings/show.html.erb
@@ -3,12 +3,13 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-md-3">
       <div class="box-infos-price">
+       <h3 class="highlight-price">Contactez-nous au <br> <strong>06 17 98 75 96</strong></h3>
         <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#create-contact">Contacter l'espace</button>
+      <!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#create-contact">Contacter l'espace</button>
       <%= render 'coworkings/contact_form' %>
       <br>
       <br>
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#create-brief">Demander un devis</button>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#create-brief">Demander un devis</button>-->
         <!-- Modal -->
         <%= render 'briefs/new_brief' %>
         <div class="row">
