--- a/app/views/pages/concept.html.erb
+++ b/app/views/pages/concept.html.erb
@@ -37,7 +37,7 @@
             L’approche de The Real Estate Jungle est essentiellement tournée vers l’analyse de scénarios d'utilisation d'espaces de travail flexibles :
             <br>
             <br>
-            - Propositions détaillés et personnalisées selon les critères de l'entreprise
+            - Propositions détaillées et personnalisées selon les critères de l'entreprise
             <br>
             - Benchmark des propositions, l'entreprise est en mesure de comparer les coûts associés aux services proposés afin de bien comprendre ce qui est compris ou non
             <br>
