--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -198,7 +198,7 @@
         <div class="modal-body-welcome">
           <p>Bonjour,</p>
           <p>Merci de votre visite sur le site.</p>
-          <p>Nous sommes actuellement en version beta, nous travaillons tous les jours pour vous proposer une offre exhaustive d'espaces de travail flexibles consultable gratuitement.</p>
+          <p>Nous travaillons tous les jours pour vous proposer une offre exhaustive d'espaces de travail flexibles consultables gratuitement.</p>
           <p>Nous avons décidé de développer The Real Estate Jungle pour <strong>accompagner les startups et les grands groupes</strong> dans leurs recherches d'espaces de travail correspondant aux nouvelles attentes des collaborateurs et aux besoins d'optimisation des entreprises.</p>
           <p><strong>N'hésitez pas à faire partie des "early adopters"</strong> en vous inscrivant simplement sur le site via Linkedin. Cela nous permettra de vous tenir au courant de notre développement.</p>
           <p>Nous sommes des professionnels de l'immobilier d'entreprise, nous cumulons plus de 15 ans d'expérience au sein de grands groupes internationaux dans le conseil et le service. Nous souhaitons apporter nos connaissances et notre expertise à toutes les startups et tous les grands groupes souhaitant se lancer dans l'aventure du travail flexible.</p>
